# CV-CPP

./: .gitignore  CMakeLists.txt  README.md
include/: image_processing.h
include/framework/: BaseApplication.h  GLTexture.h  Histogram.h  HistogramPlotterUI.h  ImageManager.h  ImageSelectorUI.h  ImageViewerUI.h  image_processing.h
include/luma/: ColorCorrectionUI.h  Curve.h  CurveEditorUI.h  HistogramsUI.h  LumaApplication.h  main.cpp
include/otsu/: OtsuApplication.h  OtsuUI.h
src/: main.cpp
src/framework/: BaseApplication.cpp  ImageManager.cpp  ImageSelectorUI.cpp  ImageViewerUI.cpp  image_processing.cpp
src/luma/: ColorCorrectionUI.cpp  CurveEditorUI.cpp  HistogramsUI.cpp  LumaApplication.cpp
src/otsu/: OtsuUI.cpp  main.cpp
